# dbstudio

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: pypi-publish.yaml
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts  utils.ts
frontend/src/components/: TableNode.tsx
src/: example.py
src/dbstudio/: fastapi.py  schema.py  starlette.py
